<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#ff8a65"
    android:layout_height="match_parent"
    tools:context="com.example.pd_pc.myapplication.RegistrationActivity"
    android:weightSum="1">

<ImageView
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:src="@drawable/museo"
    >

</ImageView>




<EditText
    android:layout_marginTop="10dp"
    android:layout_gravity="center"
    android:id="@+id/nameET"
    android:backgroundTint="#cfd8dc"
    android:maxLines="1"
    android:textColorHint="#000000"
    android:maxLength="30"
    android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter name"
    android:drawableLeft="@drawable/person"
        android:gravity="center"
    android:ems="10"
        android:textSize="15sp"
    android:textColor="#000000"
    />
    <EditText
        android:maxLength="40"
        android:maxLines="1"
        android:backgroundTint="#cfd8dc"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:id="@+id/mailET"
        android:ems="10"
        android:drawableLeft="@drawable/maild"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_mail"
        android:gravity="center"
        android:textSize="15sp"/>
    <EditText
        android:maxLength="10"
        android:textColorHint="#000000"
        android:id="@+id/cellET"
        android:textColor="#000000"
        android:backgroundTint="#cfd8dc"
        android:ems="10"
        android:drawableLeft="@drawable/cell"
        android:inputType="phone"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_cell_number"
        android:gravity="center"
        android:textSize="15sp"/>
    <EditText
        android:maxLength="15"
        android:textColorHint="#000000"
        android:id="@+id/passET"
        android:drawableLeft="@drawable/lock"
        android:inputType="textPassword"
        android:ems="10"
        android:backgroundTint="#cfd8dc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="#000000"

        android:gravity="center"
        android:textSize="15sp"/>
    <EditText
        android:maxLength="15"
        android:id="@+id/repassET"
        android:textColorHint="#000000"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/confirm"
        android:backgroundTint="#cfd8dc"
        android:textColor="#000000"
        android:ems="10"
        android:layout_height="wrap_content"
        android:hint="@string/re_type_password"
        android:gravity="center"
        android:textSize="15sp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:padding="30dp"
    android:layout_height="wrap_content">
    android:orientation="horizontal"


   <Button
       android:id="@+id/sbtbtn"
        android:layout_width="120dp"
        android:layout_height="35dp"
android:layout_marginRight="20dp"
       android:text="@string/submit"
       android:background="@drawable/buttonshape"

        />
    <Button
        android:id="@+id/rstbtn"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:text="@string/reset"
      android:background="@drawable/buttonshape"

        />




</LinearLayout>






</LinearLayout>